--- a/css/jablib.css
+++ b/css/jablib.css
@@ -1,14 +1,161 @@
-/*The content pane is a small block to contain all well elements*/
-
-div.contentpane{
-	margin-right: auto;
-	margin-left: auto;
-	width: 70%;
+body {
+  color: #000;
+  line-height: 2;
+  font-family: Helvetica;
 }
 
-.hacker{
-	background-color: #b75fe6;
-	color: #ffffff;
+
+body,
+.hamburger,
+header {
+  background-color: #b75fe6;
+}
+
+.hamburger {
+  margin-top: -20px;
+}
+
+h1 {
 	font-family: "Courier" "Courier New" monospaced;
 }
 
+section {
+  margin: 1em;
+  padding: 1em;
+  padding-top: 40px;
+}
+
+.palette-0 {
+  background-color: #e8dbef;
+}
+
+.palette-1 {
+  background-color: #f7dfbc;
+}
+
+header {
+  position: static;
+}
+
+.hamburger.is-gone {
+  display: none;
+}
+
+.hamburger-label {
+  color: #fff;
+  position: relative;
+  z-index: 4;
+}
+
+header {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+}
+
+header .logo {
+  display: none;
+}
+
+.header-logo {
+  display: none;
+}
+
+.shadow {
+  height: 1px;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+  -webkit-box-shadow: 0px 2px 4px #000000;
+     -moz-box-shadow: 0px 2px 4px #000000;
+          box-shadow: 0px 2px 4px #000000;
+}
+
+header .shadow.is-active {
+  height: 0;
+}
+
+nav {
+  display: none;
+}
+
+nav.is-active {
+  margin-top: 20px;
+  display: block;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav a {
+  display: block;
+  padding: 0 20px;
+  text-decoration: none;
+}
+
+nav a:link,
+nav a:visited,
+nav a:active,
+nav a:hover {
+  color: #fff;
+}
+
+main a:link,
+main a:visited,
+main a:active,
+main a:hover {
+  color: #b75fe6;
+  text-decoration: none;
+  border-bottom: 2px #b75fe6 solid;
+}
+
+table td {
+  border: 1px #000 solid;
+  padding: 10px;
+}
+
+@media screen and (min-width: 736px) {
+  .hamburger-label {
+    font-size: 30px;
+  }
+
+  section {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  main {
+    padding-top: 200px;
+  }
+
+  h1 {
+    font-size:2em;
+  }
+
+  .hamburger {
+    outline: 0;
+  }
+
+  header .logo {
+    display: inline;
+    width: 114px;
+    height: 80px;
+    margin-bottom: -90px;
+    margin-left: -120px;
+  }
+
+  .header-logo {
+    display: inline;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 736px) {
+  section {
+    height: 100%;
+  }
+}
